Fix layout issues
fixed the layout issues

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -2,6 +2,25 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.container{
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.children{
+  display: flex;
+  gap: 52px;
+  flex: 1 1 200px;
+}
+
+.text{
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
 img {
   width: 100px;
   height: 100px;
@@ -10,6 +29,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 36px;
 }
 
 /* do not edit this footer */
